--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Font Awesome
+@import '~@fortawesome/fontawesome-free/css/all.css';
+
+// Custom
+// @import './custom.css';
