--- a/resources/sass/custom.css
+++ b/resources/sass/custom.css
@@ -1,3 +1,8 @@
 body {
     background: red !important;
 }
+
+.button:focus,.button:active {
+    outline: none !important;
+    box-shadow: none;
+}
